--- a/Wizardry.csproj
+++ b/Wizardry.csproj
@@ -64,6 +64,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="Pages\NewCar.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Pages\NewPerson.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
